--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
     "json-server": "^0.16.3",
@@ -12,7 +13,7 @@
     "react-dom": "^16.0.0",
     "react-fuzzy": "^1.2.0",
     "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
     "react-star-ratings": "^2.3.0",
     "reactstrap": "^8.4.1",
