--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
+    "dotenv": "^10.0.0",
     "jquery": "^3.4.1",
     "json-server": "^0.16.3",
     "merge": "^1.2.1",
@@ -43,8 +44,8 @@
     "eject": "react-scripts eject",
     "lint": "eslint ./src/",
     "api": "json-server --watch db.json --port 8081",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
