--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
     "dotenv": "^10.0.0",
+    "gh-pages": "^3.2.3",
     "jquery": "^3.4.1",
     "json-server": "^0.16.3",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
+    "qier-player": "^1.3.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-fuzzy": "^1.2.0",
