--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "homepage": "http://anoopsimon.github.io/practice-website",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://localhost:4000",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.1.3",
@@ -22,7 +23,8 @@
     "react-spinners": "^0.11.0",
     "react-star-ratings": "^2.3.0",
     "reactstrap": "^8.4.1",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "ajv": "^6.9.1",
