--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gh-pages": "^3.2.3",
     "jquery": "^3.4.1",
     "json-server": "^0.16.3",
+    "jwt-check-expiration": "^1.0.5",
     "merge": "^1.2.1",
     "oidc-client": "^1.9.0",
     "qier-player": "^1.3.1",
