--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "oidc-client": "^1.9.0",
     "qier-player": "^1.3.1",
     "react": "^16.0.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^16.0.0",
     "react-fuzzy": "^1.2.0",
     "react-router-bootstrap": "^0.25.0",
